# games101hoemwork

./: README.md
PathTracing/: BVH.cpp  BVH.hpp  Bounds3.cpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Ray.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Triangle.cpp  Triangle.hpp  common.hpp  main.cpp  material.cpp  material.hpp  object.hpp  vector.hpp
PathTracing/PathTracing/: CMakeLists.txt  PathTracing.cpp  PathTracing.h
